@@ -455,10 +455,10 @@ namespace GtkDialogSample
       </Docs>
     </Member>
     <Member MemberName="AddButton">
-      <MemberSignature Language="C#" Value="public void AddButton (string button_text, Gtk.ResponseType response);" />
+      <MemberSignature Language="C#" Value="public Gtk.Widget AddButton (string button_text, Gtk.ResponseType response);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
+        <ReturnType>Gtk.Widget</ReturnType>
       </ReturnValue>
       <Parameters>
         <Parameter Name="button_text" Type="System.String" />
@@ -467,7 +467,8 @@ namespace GtkDialogSample
       <Docs>
         <summary>Adds a new response button to the dialog.</summary>
         <param name="button_text">a <see cref="T:System.String" />, text for the button</param>
-        <param name="response">a <see cref="T:System.Int32" />, the numeric response code associated with the button.</param>
+        <param name="response">a <see cref="T:Gtk.ResponseType" />, the numeric response code emitted when the button is pressed.</param>
+        <returns>a <see cref="T:Gtk.Widget" />representing the button added.</returns>
         <remarks />
       </Docs>
     </Member>
