@@ -65,9 +65,9 @@ public void AddActionWidget (Widget child, ResponseType response)
 	this.AddActionWidget (child, (int) response);
 }
 
-public void AddButton (string button_text, ResponseType response)
+public Gtk.Widget AddButton (string button_text, ResponseType response)
 {
-	this.AddButton (button_text, (int) response);
+	return this.AddButton (button_text, (int) response);
 }
 
 public void Respond (ResponseType response)
