@@ -1,5 +1,10 @@
 2004-12-03  Mike Kestner  <mkestner@novell.com>
 
+	* gtk/Dialog.custom : correct return value for AddButton overload.
+	[Fixes #70121]
+
+2004-12-03  Mike Kestner  <mkestner@novell.com>
+
 	* gtk/Gtk.metadata : mark accel_group null_ok on ImageMenuItem ctor.
 	[Fixes #69041]
 
